# Code-Summarizer

./: .code-summarizer.json  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  sample.js  sample_code.py  setup.py
.github/workflows/: test.yml
code_summarizer/: __init__.py  analyzer.py  cli.py  config.py  formatter.py  generator.py  models.py  parser.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_config.py  test_error_handling.py  test_formatter.py  test_generator.py  test_integration.py  test_models.py  test_parser.py
